--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandGUIClose.cs" />
     <Compile Include="gui.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
